--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,25 +1,20 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
+    "module": "commonjs",               // Node friendly
+    "moduleResolution": "node",         // Node-style resolution
+    "rootDir": ".",                      // preserve folder structure
+    "outDir": "dist",                    // compiled JS goes here
+    "esModuleInterop": true,             // fix cors and other CommonJS imports
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": false
   },
-  "include": ["vite.config.ts"]
+
+  "include": [
+    "backend/**/*.ts",
+    "shared/**/*.ts"
+  ]
 }
