--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,9 +30,9 @@
       "@components/*": ["components/*"],
       "@contexts/*": ["contexts/*"],
       "@shared/*": ["../../shared/*"],
-      "@types/*": ["../../shared/*"],
       "@data/*": ["data/*"],
-      "@css/*": ["css/*"]
+      "@css/*": ["css/*"],
+      "@api/*": ["apu/*"],
     }
   },
 
