--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "express": "^5.1.0",
+    "square": "^43.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3"
+  }
 }
