--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2023", // output JS version
     "module": "commonjs", // Node-friendly module system
     "moduleResolution": "node", // resolve modules like Node
-    "rootDir": ".", // preserve folder structure for TS source
+    "rootDir": "../", // preserve folder structure for TS source
     "outDir": "dist", // compiled JS output folder
     "esModuleInterop": true, // fix CommonJS imports (like cors, express)
     "allowSyntheticDefaultImports": true, // allow default imports from non-ES modules
@@ -12,10 +12,14 @@
     "forceConsistentCasingInFileNames": true, // file name case consistency
     "noEmitOnError": false, // still emit JS even if TS errors exist
 
-    "baseUrl": ".", // base path for imports
+    "baseUrl": "./", // base path for imports
     "paths": { // path aliases
-      "@models/*": ["./shared/*"], 
-      "@api/*": ["./api/*"]
+      "@adapters/*": ["src/adapters/*"],
+      "@config/*": ["src/config/*"], 
+      "@controllers/*": ["src/controllers/*"], 
+      "@routes/*": ["src/routes/*"], 
+      "@services/*": ["src/services/*"], 
+      "@models/*": ["../shared/models/*"], 
     }
   },
 
