--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "firebase-admin": "^13.5.0",
     "square": "^43.0.2"
   },
   "devDependencies": {
