--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
-    "square": "^43.0.2"
+    "square": "^43.0.2",
+    "superjson": "^2.2.2",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3"
