--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,7 @@
       "@controllers/*": ["src/controllers/*"], 
       "@routes/*": ["src/routes/*"], 
       "@services/*": ["src/services/*"], 
+      "@middleware/*": ["src/middleware/*"], 
       "@models/*": ["../shared/models/*"], 
     }
   },
