add storage api to backend and front end with firebase and imgbb adapters. move api from services and hooks to api folder.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,7 +29,8 @@
       "@pages/*": ["src/pages/*"], 
       "@components/*": ["src/components/*"],
       "@contexts/*": ["src/contexts/*"],
-      "@hooks/*": ["src/hooks/*"],
+      "@hooks/*": ["src/api/*"],
+      "@api/*": ["src/api/*"],
       "@services/*": ["src/services/*"],
       "@models/*": ["../shared/models/*"],
       "@data/*": ["src/data/*"],
