--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,8 +29,9 @@
       "@pages/*": ["src/pages/*"], 
       "@components/*": ["src/components/*"],
       "@contexts/*": ["src/contexts/*"],
-      "@hooks/*": ["src/api/*"],
       "@api/*": ["src/api/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@utils/*": ["src/utils/*"],
       "@services/*": ["src/services/*"],
       "@models/*": ["../shared/models/*"],
       "@data/*": ["src/data/*"],
