--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "prettier": "^3.6.2"
+  },
+  "name": "my-project",
+  "private": true,
+  "scripts": {
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
   }
 }
