--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
     "react-router-dom": "^7.8.2",
+    "react-zoom-pan-pinch": "^3.7.0",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
