begin using premade packages certain componets, lightbox and product image carousal. No need to redesign the wheel.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -41,5 +41,5 @@
     }
   },
 
-  "include": ["./src", "vite-env.d.ts"] // files to include
+  "include": ["./src", "vite-env.d.ts", "global.d.ts", "tailwind.config.js"] // files to include
 }
