--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+  },
+  "dependencies": {
+    "swiper": "^12.0.2"
   }
 }
