refactor: category domain -> catalog. shared/models -> shared/types. @models -> @shared/types.
implement: dynamic table creation syncing for sql databases based on typescript tables

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,19 +13,20 @@
     "noEmitOnError": false, // still emit JS even if TS errors exist
 
     "baseUrl": "./", // base path for imports
-    "paths": { // path aliases
+    "paths": {
+      // path aliases
       "@adapters/*": ["src/adapters/*"],
-      "@config/*": ["src/config/*"], 
-      "@controllers/*": ["src/controllers/*"], 
-      "@routes/*": ["src/routes/*"], 
-      "@services/*": ["src/services/*"], 
-      "@middleware/*": ["src/middleware/*"], 
-      "@models/*": ["../shared/models/*"], 
+      "@config/*": ["src/config/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@routes/*": ["src/routes/*"],
+      "@services/*": ["src/services/*"],
+      "@middleware/*": ["src/middleware/*"],
+      "@shared/*": ["../shared/*"]
     }
   },
 
   "include": [
     "./src/**/*.ts", // include all TS files in backend
-    "../shared/**/*.ts",  // include shared TS files
+    "../shared/**/*.ts" // include shared TS files
   ]
 }
