--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,7 @@
       "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
       "@services/*": ["src/services/*"],
-      "@models/*": ["../shared/models/*"],
+      "@shared/*": ["../shared/*"],
       "@data/*": ["src/data/*"],
       "@config/*": ["src/config/*"],
       "@styles/*": ["src/styles/*"]
