--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,6 +21,7 @@
       "@routes/*": ["src/routes/*"],
       "@services/*": ["src/services/*"],
       "@middleware/*": ["src/middleware/*"],
+      "@utils/*": ["src/utils/*"],
       "@shared/*": ["../shared/*"]
     }
   },
