--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
-  }
+  },
+  "dependencies": {}
 }
