--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "name": "my-project",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
+    "build-types": "npm --prefix backend run prisma:generate  && npm --prefix backend run prisma:migrate"
   },
   "dependencies": {}
 }
