--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "prisma:generate": "prisma generate --schema=./schema.prisma",
+    "prisma:push": "prisma db push --schema=./schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=./schema.prisma --name init"
   },
   "keywords": [],
