--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "build-types": "npm --prefix backend run prisma:generate  && npm --prefix backend run prisma:migrate"
+    "build-types": "npm --prefix backend run prisma:generate",
+    "prisma-push": "npm --prefix backend run prisma:push",
+    "prisma-migrate": "npm --prefix backend run prisma:migrate"
   },
   "dependencies": {}
 }
