--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
