create: generic shared CRUD interface for back end CRUD adapters and front end useApi.
feat: add stripe payment processing. Adapter in backend and payment form in front end.

refactor (ShoppingCart): seperarte shopping cart slide out into 3 components,  SlideOutCart, ShoppingCart and ShoppingCartItem.

feat - added persistent shopping cart with local storage

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "sqlite3": "^5.1.7",
     "square": "^43.0.2",
+    "stripe": "^18.5.0",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
