--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "concurrently": "^9.2.1",
-    "prettier": "^3.6.2"
+    "jest": "^30.1.3",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2"
   },
   "name": "my-project",
   "private": true,
@@ -9,7 +13,7 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
     "build-types": "npm --prefix backend run prisma:generate",
     "prisma-push": "npm --prefix backend run prisma:push",
-    "prisma-migrate": "npm --prefix backend run prisma:migrate"
-  },
-  "dependencies": {}
+    "prisma-migrate": "npm --prefix backend run prisma:migrate",
+    "test": "jest"
+  }
 }
