--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
     "react-router-dom": "^7.8.2",
