--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon src/index.ts",
     "prisma:generate": "prisma generate --schema=./schema.prisma",
     "prisma:push": "prisma db push --schema=./schema.prisma",
+    "prisma:push:force": "prisma db push --schema=./schema.prisma --force",
+    "prisma:push:force:reset": "prisma db push --schema=./schema.prisma --force-reset",
     "prisma:migrate": "prisma migrate dev --schema=./schema.prisma --name init"
   },
   "keywords": [],
