feat: update  image editor, now supports multi or single editor. update editor dialog to show saving item with spinner when saving

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -37,7 +37,8 @@
       "@shared/*": ["../shared/*"],
       "@data/*": ["src/data/*"],
       "@config/*": ["src/config/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@ui": ["src/components/UI"]
     }
   },
 
