--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -32,13 +33,15 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
+    "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.8.2",
     "react-zoom-pan-pinch": "^3.7.0",
     "superjson": "^2.2.2",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "yet-another-react-lightbox": "^3.25.0"
+    "yet-another-react-lightbox": "^3.25.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
