--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tw-color-shades": "^1.1.0",
     "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.11"
   },
