rename: AnimatedDropdownSurface -> AnimatedDropdownBox. Various UI improvments.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -43,11 +43,5 @@
     }
   },
 
-  "include": [
-    "./src",
-    "vite-env.d.ts",
-    "global.d.ts",
-    "tailwind.config.js",
-    "src/components/ui/custom/AnimatedSelect/.tsx"
-  ] // files to include
+  "include": ["./src", "vite-env.d.ts", "global.d.ts", "tailwind.config.js"] // files to include
 }
