feat(Redux & Cart Context): implement Redux store and build cart context with CartSlice and useCart hook for global use.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -30,6 +30,8 @@
       "@pages/*": ["src/pages/*"],
       "@components/*": ["src/components/*"],
       "@contexts/*": ["src/contexts/*"],
+      "@app/*": ["src/app/*"],
+      "@features/*": ["src/features/*"],
       "@api/*": ["src/api/*"],
       "@hooks/*": ["src/hooks/*"],
       "@lib/*": ["src/components/lib/*"],
