--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "@square/web-sdk": "^2.1.0",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
@@ -38,6 +39,7 @@
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
     "react-hook-form": "^7.63.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-zoom-pan-pinch": "^3.7.0",
     "superjson": "^2.2.2",
@@ -57,6 +59,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-easy-crop": "^1.16.0",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
