--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/qs": "^6.14.0",
     "concurrently": "^9.2.1",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
@@ -19,6 +20,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "qs": "^6.14.0",
     "react-colorful": "^5.6.1"
   }
 }
