--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase": "^12.2.1",
@@ -56,6 +57,7 @@
     "@eslint/js": "^9.33.0",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
