chore(monorepo): convert shared folder into standalone @mystore/shared package
- Create shared/package.json with valid npm package name
- Add @mystore/shared as dependency in frontend and backend
- Remove TS path aliases for shared imports
- Setup root package.json with npm workspaces
- Fix imports to use @mystore/shared instead of local pathsbranch merge

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@my-store/shared": "*",
     "@prisma/client": "^6.16.2",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
