--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "name": "my-project",
   "private": true,
+  "workspaces": [
+    "frontend",
+    "backend",
+    "shared"
+  ],
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
     "prisma-gen": "npm --prefix backend run prisma:generate",
