chore(deploy): web store frontend deployed to Vercel. no backend deployment yet

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "shared"
   ],
   "scripts": {
+    "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
     "prisma-gen": "npm --prefix backend run prisma:generate",
     "prisma-push": "npm --prefix backend run prisma:push",
