--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "sqlite3": "^5.1.7",
     "square": "^43.0.2",
     "stripe": "^18.5.0",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -37,6 +38,7 @@
     "node-man": "^0.6.15",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
+    "prisma-zod-generator": "^1.27.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
