--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   "type": "commonjs",
   "dependencies": {
     "@my-store/shared": "*",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -27,8 +27,7 @@
     "sqlite3": "^5.1.7",
     "square": "^43.0.2",
     "stripe": "^18.5.0",
-    "superjson": "^2.2.2",
-    "zod": "^4.1.11"
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -38,7 +37,7 @@
     "node-man": "^0.6.15",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
-    "prisma-zod-generator": "^1.27.3",
+    "prisma-generator-typescript-interfaces": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
