--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.7.0",
     "@types/qs": "^6.14.0",
     "concurrently": "^9.2.1",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "name": "my-project",
   "private": true,
@@ -18,7 +20,7 @@
   "scripts": {
     "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "prisma-gen": "npm --prefix backend run prisma:generate",
+    "prisma-gen": "npm --prefix backend run prisma:generate && ts-node ./shared/post-gen.ts",
     "prisma-push": "npm --prefix backend run prisma:push",
     "prisma-push-force": "npm --prefix backend run prisma:push:force",
     "prisma-push-force-reset": "npm --prefix backend run prisma:push:force:reset",
