--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "@my-store/shared": "*",
     "@prisma/client": "^6.16.3",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "sqlite3": "^5.1.7",
     "square": "^43.0.2",
@@ -30,9 +33,12 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "node-man": "^0.6.15",
     "nodemon": "^3.1.10",
