--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@easypost/api": "^8.2.0",
     "@my-store/shared": "*",
     "@prisma/client": "^6.16.3",
     "bcrypt": "^6.0.0",
