refactor(Shared): types now exported from @shared/types, add @shared/util for global utils.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,6 +15,7 @@
     "baseUrl": "./", // base path for imports
     "paths": {
       // path aliases
+      "@shared/*": ["../shared/*"],
       "@adapters/*": ["src/adapters/*"],
       "@config/*": ["src/config/*"],
       "@controllers/*": ["src/controllers/*"],
