--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,7 @@
     "baseUrl": "./", // root for imports
     "paths": {
       // aliases
+      "@shared/*": ["../shared/*"],
       "@pages/*": ["src/pages/*"],
       "@components/*": ["src/components/*"],
       "@contexts/*": ["src/contexts/*"],
