--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "prisma-gen": "npm --prefix backend run prisma:generate && ts-node ./shared/post-gen.ts",
+    "prisma-gen": "npm --prefix backend run prisma:generate && ts-node ./shared/types/PostTypeGen.ts",
     "prisma-push": "npm --prefix backend run prisma:push",
     "prisma-push-force": "npm --prefix backend run prisma:push:force",
     "prisma-push-force-reset": "npm --prefix backend run prisma:push:force:reset",
