--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@my-store/shared": "*",
     "@hookform/resolvers": "^5.2.2",
+    "@my-store/shared": "*",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -36,6 +36,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "framer-motion": "^12.23.19",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
