--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,9 +15,9 @@
     "baseUrl": "./", // base path for imports
     "paths": {
       // path aliases
-      "@shared/*": ["../shared/*"],
+      "@config": ["src/config"],
       "@adapters/*": ["src/adapters/*"],
-      "@config/*": ["src/config/*"],
+      "@shared/*": ["../shared/*"],
       "@controllers/*": ["src/controllers/*"],
       "@routes/*": ["src/routes/*"],
       "@services/*": ["src/services/*"],
@@ -28,6 +28,7 @@
 
   "include": [
     "./src/**/*.ts", // include all TS files in backend
-    "../shared/**/*.ts" // include shared TS files
+    "../shared/**/*.ts", // include shared TS files
+    "src/services/index"
   ]
 }
