--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
     "react-hook-form": "^7.63.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-zoom-pan-pinch": "^3.7.0",
@@ -64,6 +65,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-easy-crop": "^1.16.0",
+    "@types/react-places-autocomplete": "^7.2.14",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
