--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "scripts": {
     "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "prisma-gen": "npm --prefix backend run prisma:generate && ts-node ./shared/types/PostTypeGen.ts",
-    "prisma-push": "npm --prefix backend run prisma:push",
-    "prisma-push-force": "npm --prefix backend run prisma:push:force",
-    "prisma-push-force-reset": "npm --prefix backend run prisma:push:force:reset",
+    "prisma-gen": "npm --prefix backend run prisma:generate && npm run post-type-gen",
+    "prisma-push": "npm --prefix backend run prisma:push && npm run post-type-gen",
+    "prisma-push-force": "npm --prefix backend run prisma:push:force && npm run post-type-gen",
+    "prisma-push-force-reset": "npm --prefix backend run prisma:push:force:reset && npm run post-type-gen",
     "prisma-migrate": "npm --prefix backend run prisma:migrate",
+    "post-type-gen": "ts-node ./shared/utils/PostTypeGen.ts",
     "test": "jest"
   },
   "dependencies": {
