--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,9 +20,9 @@
       "@shared/*": ["../shared/*"],
       "@controllers/*": ["src/controllers/*"],
       "@routes/*": ["src/routes/*"],
-      "@services/*": ["src/services/*"],
       "@middleware/*": ["src/middleware/*"],
-      "@utils/*": ["src/utils/*"]
+      "@services": ["src/services"],
+      "@utils": ["src/utils"]
     }
   },
 
