--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.1",
     "react-hook-form": "^7.63.0",
+    "react-number-format": "^5.4.4",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
