--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "@easypost/api": "^8.2.0",
     "@my-store/shared": "*",
     "@prisma/client": "^6.16.3",
-    "bcrypt": "^6.0.0",
+    "argon2": "^0.44.0",
     "better-sqlite3": "^12.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -29,19 +29,15 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "sqlite3": "^5.1.7",
-    "square": "^43.0.2",
-    "stripe": "^18.5.0",
-    "superjson": "^2.2.2"
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
-    "node-man": "^0.6.15",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
     "prisma-generator-typescript-interfaces": "^3.1.0",
