--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "prisma:generate": "prisma generate --schema=./schema.prisma",
     "prisma:push": "prisma db push --schema=./schema.prisma",
     "prisma:push:force": "prisma db push --schema=./schema.prisma --force",
