--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "prisma": "node backend/run-prisma.js",
+    "prisma": "node scripts/run-prisma.js",
     "test": "jest"
   },
   "dependencies": {
