--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "npm --prefix frontend run build",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
     "prisma": "node scripts/run-prisma.js",
+    "merge-gshop": "node scripts/merge-gshop.js",
     "test": "jest"
   },
   "dependencies": {
