--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2023",
     "module": "commonjs",
     "moduleResolution": "node",
+    "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,7 +18,6 @@
       "@config/*": ["config/*"],
       "@adapters/*": ["adapters/*"],
       "@controllers/*": ["controllers/*"],
-      "@routes/*": ["routes/*"],
       "@middleware/*": ["middleware/*"],
       "@services": ["services"],
       "@services/*": ["services/*"],
