--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -26,7 +26,7 @@
     }
   },
 
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "src/middleware/corsMiddleware.ts"],
 
   "references": [{ "path": "../shared" }]
 }
