feat(finalPrice): add final price to product scheme for easy access and querying

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -46,6 +46,6 @@
   },
 
   "include": ["./src", "vite-env.d.ts", "global.d.ts", "tailwind.config.js"],
-
+  "exclude": ["node_modules", "dist", "build"],
   "references": [{ "path": "../shared" }]
 }
