--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,6 +27,6 @@
   },
 
   "include": ["./src/**/*.ts", "src/middleware/corsMiddleware.ts"],
-
+  "exclude": ["node_modules", "dist", "build"],
   "references": [{ "path": "../shared" }]
 }
