--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-# PostgreSQL Pooler Connection 
-#DATABASE_URL="postgresql://postgres.xbbovndnldxrkoozastv:GShopY3$hua711@aws-1-us-east-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
+# PostgreSQL Direct Connection 
 DATABASE_URL="postgresql://postgres.xbbovndnldxrkoozastv:GShopY3$hua711@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
