--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@easypost/api": "^8.2.0",
     "@prisma/client": "^6.16.3",
+    "@supabase/supabase-js": "^2.76.1",
     "argon2": "^0.44.0",
     "axios": "^1.12.2",
     "better-sqlite3": "^12.2.0",
