--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-# PostgreSQL Direct Connection 
+# PostgreSQL Direct Connection for Development 
 DATABASE_URL="postgresql://postgres.xbbovndnldxrkoozastv:GShopY3$hua711@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
