--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 backend/node_modules
 backend/dist
 backend/dev.db
+backend/.env
 backend/.env.development
 backend/.env.production
 
@@ -36,3 +37,4 @@ logs
 *.njsproj
 *.sln
 *.sw?
+
