fix: remove unnecessary lg:gap-lg class from horizontal layout in ProductCardList

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 # PostgreSQL Direct Connection for Development 
 DATABASE_URL="postgresql://postgres.xbbovndnldxrkoozastv:GShopY3$hua711@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
+#DATABASE_URL="postgresql://postgres.epekygafjydefxqtalse:Chuck$h0p2025@aws-1-us-east-2.pooler.supabase.com:5432/postgres"
