--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "multer": "^2.0.2",
+    "openai": "^6.7.0",
     "shared": "*",
     "sqlite3": "^5.1.7",
     "stripe": "^18.5.0",
