--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "module-alias": "^2.2.3",
     "multer": "^2.0.2",
     "openai": "^6.7.0",
-    "shared": "file:../shared",
+    "shared": "*",
     "sqlite3": "^5.1.7",
     "stripe": "^18.5.0",
     "ts-node-dev": "^2.0.0"
