--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ logs
 *.sw?
 
 backend/.env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.ebextensions/env.config
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
